# rings-design

./: .gitignore  LICENSE  README.md  pyproject.toml  rings_design.py
.github/workflows/: ci.yml
rings_resonator/: __init__.py  rings_design.py  rings_gui.py
tests/: __init__.py  test_rings_design.py  test_rings_gui.py
