[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rings-resonator"
version = "1.0.0"
description = "Ring resonator design and simulation for silicon photonics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mustafa Hammood", email = "mustafa@siepic.com"},
]
maintainers = [
    {name = "Mustafa Hammood", email = "mustafa@siepic.com"},
]
keywords = [
    "photonics",
    "silicon-photonics", 
    "ring-resonator",
    "optical-simulation",
    "waveguide",
    "optics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/SiEPIC/rings-design"
Repository = "https://github.com/SiEPIC/rings-design"
Documentation = "https://github.com/SiEPIC/rings-design#readme"
Issues = "https://github.com/SiEPIC/rings-design/issues"
Changelog = "https://github.com/SiEPIC/rings-design/blob/main/CHANGELOG.md"

[project.scripts]
rings-design = "rings_design:main"

[tool.hatch.build.targets.wheel]
packages = ["rings_design.py"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=rings_design --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 